RESOLVED FIXED309122
[JSC] Distinguish GC UAF crashes from general memory corruption crashes
https://bugs.webkit.org/show_bug.cgi?id=309122
Summary [JSC] Distinguish GC UAF crashes from general memory corruption crashes
Dan Hecht
Reported 2026-03-03 16:17:45 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-03 16:17:56 PST
Dan Hecht
Comment 2 2026-03-03 16:27:31 PST
EWS
Comment 3 2026-03-04 15:41:07 PST
Committed 308669@main (80d2d35df693): <https://commits.webkit.org/308669@main> Reviewed commits have been landed. Closing PR #59846 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.